# Lynen-s_Spiral

./: .copier-answers.yml  LICENSE  README.md  REPORT.ipynb  pyproject.toml  requirements.txt  stream_lit_ideas.txt
docs/source/: conf.py
notebooks/: README.md  REPORT.ipynb
src/lynen_spiral/: __init__.py  enhanced_fatty_acid.py  fatty_acid.py  fatty_acid_metabolism.ipynb  ipeksnotebook.ipynb  old_version_enhanced_fatty_acid.py  panda_data.py  test_visualisation.py  test_visualisation_5.py
src/lynen_spiral/Lynen_spiral_visualisation/: Home.py  app.py  enhanced_fatty_acid.py  fatty_acid.py  home_page.py
src/lynen_spiral/Lynen_spiral_visualisation/Pages/: 2_🌀_3D_Spiral.py  3_📊_2D_Cycle.py  3_📊_Detailed_Analysis.py  Lynen_Spiral.py  Mecanisms.py  Mechanisms.py
src/lynen_spiral/Lynen_spiral_visualisation_with_3D_structure/: app.py  enhanced_fatty_acid.py
src/lynen_spiral/Lynen_spiral_visualisation_with_3D_structure/Pages/: 2_🌀_3D_Spiral.py
tests/: ipek_manual_test_deletelater.py  test_enhanced_fatty_acid.py  test_example_module.py  test_fatty_acid.py
